Remove scheduledTimetable field and timetable methods from TripPattern
TripPattern no longer holds a reference to its scheduled Timetable.
Scheduled timetables are now stored externally in TimetableRepository
and looked up via TimetableRepository.getScheduledTimetable(pattern).

Removed from TripPattern: scheduledTimetable field,
getScheduledTimetable(), scheduledTripsAsStream(), and all imports
of Timetable, Trip, TripTimes, and Stream.

Removed from TripPatternBuilder: scheduledTimetable field,
withScheduledTimeTable(), getScheduledTimetable().

TimetableSnapshot now receives a scheduledTimetables map for
resolving timetables and reverting real-time updates.

All production and test callers migrated to use the new lookup API.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>